step_6/destination-rule-header.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productpage
spec:
  host: productpage
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage
spec:
  hosts:
  - productpage
  http:
  - match:
    - headers:
        region:
          exact: spain
    fault:
      abort:
        percent: 100
        httpStatus: 500
    route:
    - destination:
        host: productpage
        subset: v2
    - destination:
        host: productpage
        subset: v1
